--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,68 @@
-nav {
+
+/* nav {
     background-color: aliceblue;
     overflow: auto;
 }
 
 nav a {
-    display: inline-block;
-    text-align: center;
-    justify-content: space-around;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-  }
+    display: flex;
+    justify-content: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: none;
+  } */
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
+body {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-section h1 {
+}
+
+.box{
+    width: 800px;
+    max-width: 80%;
+    background-color: lightgray;
+    border-radius: 10px;
+    padding: 20px;
+}
+.btn-grid {
+    display: grid;
+    gap: 20px;
+    margin: 20px 0;
+   }
+
+.start-btn, .next-btn {
+    justify-content: center;
+    margin: 25px;
+    display: row;
+    background-color: blueviolet;
+    font-size: 22px;
+    width: 25%;
+    color: cornsilk;
+    border-radius: 10px;
+
+}
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hide{
+    display: none;
+}
+h1 {
     font-size: 36px;
     justify-content: center;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-button {
+/* button {
     text-align: center;
     background-color: blueviolet;
     font-size: 18px;
@@ -32,4 +76,4 @@ button:hover {
     background-color: cornsilk;
     color: blueviolet;
     text-decoration: bold;
-}
+} */
